Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1534,7 +1534,7 @@ One can see that the $\Delta \chi^2$-like variable is a log-likelihood-ratio, in
 %     \item We also generate a large number of toy experiments under the LEE hypothesis. The $\Delta \chi^2 = \chi^2_{H0} - \chi^2_{H1}$ is computed for each toy experiment and this gives the $\Delta \chi^2_{H1}$ distribution.
 %     \item The quoted sensitivity for the discovery of the LEE is given by the p-value at the median of the $H1$ distribution.
 % \end{enumerate}
-\textcolor{blue}{The statistical-only sensitivity is measured using the result of the box-cut 1$e$N$p$ selection (figure~\ref{fig:1eNp:box:RUN1}). The distribution of the test-statistic computed with SBNFit ($\Delta\chi^2$) and  Figure~\ref{fig:1eNp:box:statonlysensitivity}.  The left panel shows the sensitivity estimated via SBNFit with the }
+\textcolor{blue}{The statistical-only sensitivity is measured using the result of the box-cut 1$e$N$p$ selection (figure~\ref{fig:1eNp:box:RUN1}). The distribution of the test-statistic computed with SBNFit ($\Delta\chi^2$, eq.~\ref{eqn:deltachi2}) and the stand-alone tool  Figure~\ref{fig:1eNp:box:statonlysensitivity}.  The left panel shows the sensitivity estimated via SBNFit with the }
 
 \begin{comment}
 \begin{figure}[H]
