--- a/main.tex
+++ b/main.tex
@@ -296,7 +296,8 @@ Finally, the observed spectra from the \nueccnopinp and the \numu selections are
 
 \subsection{Analysis Status \textcolor{red}{Elena/David/ Group discussion}}
 
-\par As will be clear from section \ref{}, we have two selections for our most sensitive channel (\npsel): a cut-base selection and a BDT-based selection.  The \npsel channel achieves a $5-10$\% efficiency with a 73  purity for the cut-based  and a $5-15$\% efficiency with a 81\%  purity for the BDT-based selection. These selections lead to $\mathcal{O}$(10) expected MB-$\nu_e$ LEE signal events and $40-70$ intrinsic $\nu_e$ events for the full Run $1-4$ dataset. For the box-cut selection this performance translates in a statistics-only sensitivity of $2.1-2.3\sigma$ depending on the test-statistic used. The low statistics of the predicted signals lead to significant fluctuations in the expected sensitivity, covering the range $1.5-3.1\sigma$. 
+\par As will be clear from section \ref{sec:nueselection:1eNp}, we have two workflows for our most sensitive channel (\npsel): a cut-base selection and a BDT-based selection.  The \npsel channel achieves a $5-10$\% efficiency with a 73\%  purity for the cut-based  and a $5-15$\% efficiency with a 81\%  purity for the BDT-based selection. These selections lead to $\mathcal{O}$(10) expected MB-$\nu_e$ LEE signal events and $40-70$ intrinsic $\nu_e$ events for the full Run $1-4$ dataset. This performance translates in a statistics-only sensitivity of $2.1-2.3\sigma$ for the box-cut selection depending on the test-statistic used. The low statistics of the predicted signals lead to significant fluctuations in the expected sensitivity, covering the range $1.5-3.1\sigma$. 
+ \emph{Given the efficiency and purity obtained with the BDT-based workflow, we expect a higher sensitivity compared to the cut-based workflow.  We are in the process of re-evaluating the BDT-based performances on the latest MC samples, since  a re-calibration of the calorimetry has been performed.} 
 
 \begin{figure}[ht]
 \begin{center}
