--- a/NueCCsel/NueCCsel.tex
+++ b/NueCCsel/NueCCsel.tex
@@ -135,12 +135,13 @@ The final event classification build on top of the particle identification perfo
 
 \begin{enumerate}
     \item Electron BDT response
-    \item Lowest BDT response of the other daughter BDT. \textcolor{blue}{(David) Lowest means the score for the least nue-like PFParticle? What happens if no additional PFParticle is present?}
+    \item Lowest BDT response of the other daughter BDT from the collection of PFParticles, except the electron candidate shower. In the case of a single shower event, this field is assigned the default value 1. 
+    %\textcolor{blue}{(David) Lowest means the score for the least nue-like PFParticle? What happens if no additional PFParticle is present?}
     \item contained\_fraction
     \item Number of showers
     \item hits\_ratio
-    \item Mean BDT response of the other daughter BDT \textcolor{blue}{(David) If there are two PFParticles in addition to the electron candidate, this quantity is the average of their BDT response. What happens if there are no additional PFParticles?}
-    \item Number of particles away from the vertex. \textcolor{blue}{(David) Away from the vertex means how many cm?}
+    \item Mean BDT response of the other daughter BDT from the collection of PFParticles, except the electron candidate shower. In the case of a single shower event, this field is assigned the default value 1. 
+    \item Number of particles in the slice that have a reconstructed start point more than \SI{3}{\cm} from the neutrino vertex.
 \end{enumerate}
 The response of the event classification is given in the left panel \cref{fig:pre_event_score}. After the selection, the efficiency is 21\%, corresponding to 280 electron neutrino's in the Run 1-4 data-set. The distribution of the reconstructed electron energy is given in the right panel of \cref{fig:pre_event_score}. \cref{fig:nueccinc_eff} documents the efficiency of the SliceID, pre-selection and final inclusive selection for the three final state categories.
 
